first menu item border top no longer cut off if current at mobile widths

--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -9,6 +9,11 @@
   ul {
     list-style: none;
     margin: 0;
+
+    > .current-menu-item:first-child,
+    > .current_page_item:first-child {
+      margin-top: 1px;
+    }
   }
   li {
     margin-bottom: $baseline-height;
