--- a/style.css
+++ b/style.css
@@ -901,6 +901,10 @@ a img {
   list-style: none;
   margin: 0;
 }
+.menu-primary ul > .current-menu-item:first-child,
+.menu-primary ul > .current_page_item:first-child {
+  margin-top: 1px;
+}
 .menu-primary li {
   margin-bottom: 1.5em;
 }
